--- a/index.html
+++ b/index.html
@@ -2,14 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>IPL 2019</title>
+  <title>Suraj Singh | Full-Stack Developer</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link rel="stylesheet" href="styles.f19f7601c76a3f6e06f8.css"></head>
+<link rel="stylesheet" href="styles.f464e84a553dbde52a79.css"></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.26209474bfa8dc87a77c.js"></script><script type="text/javascript" src="polyfills.7e61eeabe4f75fabb7d3.js"></script><script type="text/javascript" src="main.664938d21ee1790fc8f1.js"></script></body>
+<script src="runtime-es2015.1eba213af0b233498d9d.js" type="module"></script><script src="runtime-es5.1eba213af0b233498d9d.js" nomodule defer></script><script src="polyfills-es5.fbd57560e1ace22736bf.js" nomodule defer></script><script src="polyfills-es2015.6dd6c8b12cbbb95255b8.js" type="module"></script><script src="main-es2015.85519a3cf830f4a27092.js" type="module"></script><script src="main-es5.85519a3cf830f4a27092.js" nomodule defer></script></body>
 </html>
